--- a/index.html
+++ b/index.html
@@ -1,9 +1,30 @@
-<html>
- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Golf Scorecard</title>
+    <link rel="stylesheet" href="./index.css">
+</head>
 <body>
-  <h1>James Gillard</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+    <head>
+        <div class="logo">
+            <img src="PGA_Logo.png" alt="PGA Logo">
+        </div>
+     </head>
+
+     <div>
+        <p class="buttons"><a href="./index.html">Home</a></p>
+        <p class="buttons"><a href="./news">News</a></p>
+        <p class="buttons"><a href="./players">Players</a></p>
+        <p class="buttons"><a href="./scorecard">Scorecard</a></p>
+        <p class="buttons"><a href="./gallery">Gallery</a></p>
+     </div>
+
+    <div class="container">
+        <p class="title"></p>
+        <img class="banner" src="./TeamPhoto.jpg" alt="Team Photo">
+    </div>
 </body>
- 
 </html>
