--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <head>
         <div class="logo">
-            <img src="PGA_Logo.png" alt="PGA Logo">
+            <img src="C:\Desktop\Projects\Golf\PGA_Logo.png" alt="PGA Logo">
         </div>
      </head>
 
